// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`converts characters to sprites correctly 1`] = `
".11111..
11...11.
11..111.
11.1111.
1111.11.
111..11.
.11111..
........
"
`;

exports[`converts characters to sprites correctly 2`] = `
"..11....
.111....
..11....
..11....
..11....
..11....
111111..
........
"
`;

exports[`converts characters to sprites correctly 3`] = `
".1111...
11..11..
....11..
..111...
.11.....
11..11..
111111..
........
"
`;

exports[`converts characters to sprites correctly 4`] = `
".1111...
11..11..
....11..
..111...
....11..
11..11..
.1111...
........
"
`;

exports[`converts characters to sprites correctly 5`] = `
"...111..
..1111..
.11.11..
11..11..
1111111.
....11..
...1111.
........
"
`;

exports[`converts characters to sprites correctly 6`] = `
"111111..
11......
11111...
....11..
....11..
11..11..
.1111...
........
"
`;

exports[`converts characters to sprites correctly 7`] = `
"..111...
.11.....
11......
11111...
11..11..
11..11..
.1111...
........
"
`;

exports[`converts characters to sprites correctly 8`] = `
"111111..
11..11..
....11..
...11...
..11....
..11....
..11....
........
"
`;

exports[`converts characters to sprites correctly 9`] = `
".1111...
11..11..
11..11..
.1111...
11..11..
11..11..
.1111...
........
"
`;

exports[`converts characters to sprites correctly 10`] = `
".1111...
11..11..
11..11..
.11111..
....11..
...11...
.111....
........
"
`;

exports[`converts characters to sprites correctly 11`] = `
"........
........
.1111...
....11..
.11111..
11..11..
.111.11.
........
"
`;

exports[`converts characters to sprites correctly 12`] = `
"111.....
.11.....
.11.....
.11111..
.11..11.
.11..11.
11.111..
........
"
`;

exports[`converts characters to sprites correctly 13`] = `
"........
........
.1111...
11..11..
11......
11..11..
.1111...
........
"
`;

exports[`converts characters to sprites correctly 14`] = `
"...111..
....11..
....11..
.11111..
11..11..
11..11..
.111.11.
........
"
`;

exports[`converts characters to sprites correctly 15`] = `
"........
........
.1111...
11..11..
111111..
11......
.1111...
........
"
`;

exports[`converts characters to sprites correctly 16`] = `
"..111...
.11.11..
.11.....
1111....
.11.....
.11.....
1111....
........
"
`;

exports[`converts characters to sprites correctly 17`] = `
"........
........
.111.11.
11..11..
11..11..
.11111..
....11..
11111...
"
`;

exports[`converts characters to sprites correctly 18`] = `
"111.....
.11.....
.11.11..
.111.11.
.11..11.
.11..11.
111..11.
........
"
`;

exports[`converts characters to sprites correctly 19`] = `
"..11....
........
.111....
..11....
..11....
..11....
.1111...
........
"
`;

exports[`converts characters to sprites correctly 20`] = `
"....11..
........
....11..
....11..
....11..
11..11..
11..11..
.1111...
"
`;

exports[`converts characters to sprites correctly 21`] = `
"111.....
.11.....
.11..11.
.11.11..
.1111...
.11.11..
111..11.
........
"
`;

exports[`converts characters to sprites correctly 22`] = `
".111....
..11....
..11....
..11....
..11....
..11....
.1111...
........
"
`;

exports[`converts characters to sprites correctly 23`] = `
"........
........
11..11..
1111111.
1111111.
11.1.11.
11...11.
........
"
`;

exports[`converts characters to sprites correctly 24`] = `
"........
........
11111...
11..11..
11..11..
11..11..
11..11..
........
"
`;

exports[`converts characters to sprites correctly 25`] = `
"........
........
.1111...
11..11..
11..11..
11..11..
.1111...
........
"
`;

exports[`converts characters to sprites correctly 26`] = `
"........
........
11.111..
.11..11.
.11..11.
.11111..
.11.....
1111....
"
`;

exports[`converts characters to sprites correctly 27`] = `
"........
........
.111.11.
11..11..
11..11..
.11111..
....11..
...1111.
"
`;

exports[`converts characters to sprites correctly 28`] = `
"........
........
11.111..
.111.11.
.11..11.
.11.....
1111....
........
"
`;

exports[`converts characters to sprites correctly 29`] = `
"........
........
.11111..
11......
.1111...
....11..
11111...
........
"
`;

exports[`converts characters to sprites correctly 30`] = `
"...1....
..11....
.11111..
..11....
..11....
..11.1..
...11...
........
"
`;

exports[`converts characters to sprites correctly 31`] = `
"........
........
11..11..
11..11..
11..11..
11..11..
.111.11.
........
"
`;

exports[`converts characters to sprites correctly 32`] = `
"........
........
11..11..
11..11..
11..11..
.1111...
..11....
........
"
`;

exports[`converts characters to sprites correctly 33`] = `
"........
........
11...11.
11.1.11.
1111111.
1111111.
.11.11..
........
"
`;

exports[`converts characters to sprites correctly 34`] = `
"........
........
.11111..
11......
.1111...
....11..
11111...
........
"
`;

exports[`converts characters to sprites correctly 35`] = `
"........
........
11..11..
11..11..
11..11..
.11111..
....11..
11111...
"
`;

exports[`converts characters to sprites correctly 36`] = `
"........
........
111111..
1..11...
..11....
.11..1..
111111..
........
"
`;

exports[`converts characters to sprites correctly 37`] = `
"..11....
.1111...
11..11..
11..11..
111111..
11..11..
11..11..
........
"
`;

exports[`converts characters to sprites correctly 38`] = `
"111111..
.11..11.
.11..11.
.11111..
.11..11.
.11..11.
111111..
........
"
`;

exports[`converts characters to sprites correctly 39`] = `
"..1111..
.11..11.
11......
11......
11......
.11..11.
..1111..
........
"
`;

exports[`converts characters to sprites correctly 40`] = `
"11111...
.11.11..
.11..11.
.11..11.
.11..11.
.11.11..
11111...
........
"
`;

exports[`converts characters to sprites correctly 41`] = `
"1111111.
.11...1.
.11.1...
.1111...
.11.1...
.11...1.
1111111.
........
"
`;

exports[`converts characters to sprites correctly 42`] = `
"1111111.
.11...1.
.11.1...
.1111...
.11.1...
.11.....
1111....
........
"
`;

exports[`converts characters to sprites correctly 43`] = `
"..1111..
.11..11.
11......
11......
11..111.
.11..11.
..11111.
........
"
`;

exports[`converts characters to sprites correctly 44`] = `
"11..11..
11..11..
11..11..
111111..
11..11..
11..11..
11..11..
........
"
`;

exports[`converts characters to sprites correctly 45`] = `
".1111...
..11....
..11....
..11....
..11....
..11....
.1111...
........
"
`;

exports[`converts characters to sprites correctly 46`] = `
"...1111.
....11..
....11..
....11..
11..11..
11..11..
.1111...
........
"
`;

exports[`converts characters to sprites correctly 47`] = `
"111..11.
.11..11.
.11.11..
.1111...
.11.11..
.11..11.
111..11.
........
"
`;

exports[`converts characters to sprites correctly 48`] = `
"1111....
.11.....
.11.....
.11.....
.11...1.
.11..11.
1111111.
........
"
`;

exports[`converts characters to sprites correctly 49`] = `
"11...11.
111.111.
1111111.
1111111.
11.1.11.
11...11.
11...11.
........
"
`;

exports[`converts characters to sprites correctly 50`] = `
"11...11.
111..11.
1111.11.
11.1111.
11..111.
11...11.
11...11.
........
"
`;

exports[`converts characters to sprites correctly 51`] = `
"..111...
.11.11..
11...11.
11...11.
11...11.
.11.11..
..111...
........
"
`;

exports[`converts characters to sprites correctly 52`] = `
"111111..
.11..11.
.11..11.
.11111..
.11.....
.11.....
1111....
........
"
`;

exports[`converts characters to sprites correctly 53`] = `
".1111...
11..11..
11..11..
11..11..
11.111..
.1111...
...111..
........
"
`;

exports[`converts characters to sprites correctly 54`] = `
"111111..
.11..11.
.11..11.
.11111..
.11.11..
.11..11.
111..11.
........
"
`;

exports[`converts characters to sprites correctly 55`] = `
".1111...
11..11..
111.....
.111....
...111..
11..11..
.1111...
........
"
`;

exports[`converts characters to sprites correctly 56`] = `
"111111..
1.11.1..
..11....
..11....
..11....
..11....
.1111...
........
"
`;

exports[`converts characters to sprites correctly 57`] = `
"11..11..
11..11..
11..11..
11..11..
11..11..
11..11..
111111..
........
"
`;

exports[`converts characters to sprites correctly 58`] = `
"11..11..
11..11..
11..11..
11..11..
11..11..
.1111...
..11....
........
"
`;

exports[`converts characters to sprites correctly 59`] = `
"11...11.
11...11.
11...11.
11.1.11.
1111111.
111.111.
11...11.
........
"
`;

exports[`converts characters to sprites correctly 60`] = `
".1111...
11..11..
111.....
.111....
...111..
11..11..
.1111...
........
"
`;

exports[`converts characters to sprites correctly 61`] = `
"11..11..
11..11..
11..11..
.1111...
..11....
..11....
.1111...
........
"
`;

exports[`converts characters to sprites correctly 62`] = `
"1111111.
11...11.
1...11..
...11...
..11..1.
.11..11.
1111111.
........
"
`;
